# fujifilm-converter

./: .dockerignore  .gitignore  Dockerfile  README-EN.md  README.md  common.py  dji.py  fuji.py  main.py  process.py  pyproject.toml  requirements.txt  setup.py  sony.py
.grok/skills/fuji-convert/: SKILL.md
fujifilm_converter/: __init__.py  cameras.py  cli.py  exif.py
legacy/: dji.py  fuji.py  main.py  process.py  sony.py
preset/: a7c2_jpg.py
src/fujifilm_converter/: __init__.py  archiving.py  cameras.py  cli.py  converters.py  core.py
tests/: test_cameras.py
