[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fujifilm-converter"
version = "0.4.0"
description = "Patch EXIF on RAW/DNG files so Lightroom thinks they came from Fuji, Hasselblad, Leica or any custom camera. Unlock film simulations and camera profiles with any sensor."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "fujifilm-converter contributors" }
]
keywords = ["fujifilm", "hasselblad", "exif", "raw", "dng", "lightroom", "film-simulation", "photography", "camera", "exiftool"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Utilities",
]

[project.scripts]
fuji-convert = "fujifilm_converter.cli:main"
fujifilm-convert = "fujifilm_converter.cli:main"  # also available as the fuller name

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
Homepage = "https://github.com/zintrulcre/fujifilm-converter"
